package(default_visibility = ["//visibility:public"])

load("@rules_python//python:defs.bzl", "py_binary", "py_test")
load("@subpar//:subpar.bzl", "par_binary")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

py_binary(
    name = "netutil",
    srcs = ["netutil.py"],
    python_version = "PY3",
    srcs_version = "PY3",
)

py_test(
    name = "netutil_test",
    srcs = ["netutil_test.py"],
    python_version = "PY3",
    srcs_version = "PY3",
)

par_binary(
    name = "netutil_portable",
    srcs = [
        "netutil.py",
        "netutil_test.py",
    ],
    main = "netutil.py",
    python_version = "PY3",
    srcs_version = "PY3",
)

buildifier(
    name = "buildifier",
)
